2005-11-21  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/aalib/gstaasink.c: (gst_aasink_setcaps):
	* gst/avi/gstavidemux.c: (gst_avi_demux_parse_file_header),
	(gst_avi_demux_read_subindexes), (gst_avi_demux_parse_stream),
	(gst_avi_demux_parse_odml), (gst_avi_demux_stream_index),
	(gst_avi_demux_sync), (gst_avi_demux_stream_header),
	(gst_avi_demux_stream_data):
	* gst/matroska/matroska-demux.c: (gst_matroska_demux_video_caps):
	* gst/wavenc/gstwavenc.c: (write_metadata):
	* gst/wavparse/gstwavparse.c: (gst_wavparse_parse_adtl),
	(gst_wavparse_parse_file_header), (gst_wavparse_stream_headers):
	Fixes for GST_FOURCC_FORMAT API change.

2005-11-21  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/cairo/gsttextoverlay.c: (gst_text_overlay_finalize),
	(gst_text_overlay_init), (gst_text_overlay_text_pad_linked),
	(gst_text_overlay_text_pad_unlinked), (gst_text_overlay_pop_video),
	(gst_text_overlay_pop_text), (gst_text_overlay_collected),
	(gst_text_overlay_change_state):
	* gst/matroska/matroska-mux.c: (gst_matroska_mux_init),
	(gst_matroska_mux_reset), (gst_matroska_mux_request_new_pad),
	(gst_matroska_mux_best_pad), (gst_matroska_mux_change_state):
	* gst/smpte/gstsmpte.c: (gst_smpte_init), (gst_smpte_collected):
	* gst/videomixer/videomixer.c: (gst_videomixer_init),
	(gst_videomixer_request_new_pad), (gst_videomixer_fill_queues),
	(gst_videomixer_change_state):
	  Fix for collect pads API change. Also fix textoverlay state
	  change function.

2005-11-20  Julien MOUTTE  <julien@moutte.net>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_start): Replace
	GST_PAD_IS_USABLE by something approaching it.

2005-11-20  Julien MOUTTE  <julien@moutte.net>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_start): Fix for
	API changes.
	* gst/wavenc/gstwavenc.c: (gst_wavenc_chain): Fix for API changes,
	but also fix the code that was not checking return values from
	pad_push neither using pad_alloc_buffer.
