@@ -253,9 +253,9 @@ gst_mikmod_srcfixate (GstPad * pad, const GstCaps * caps)
   ret = gst_caps_copy (caps);
   structure = gst_caps_get_structure (ret, 0);
 
-  if (gst_caps_structure_fixate_field_nearest_int (structure, "channels", 2))
+  if (gst_structure_fixate_field_nearest_int (structure, "channels", 2))
     return ret;
-  if (gst_caps_structure_fixate_field_nearest_int (structure, "rate", 44100))
+  if (gst_structure_fixate_field_nearest_int (structure, "rate", 44100))
     return ret;
 
   gst_caps_free (ret);
