@@ -260,9 +260,9 @@ gst_goom_src_negotiate (GstGoom * goom)
   }
 
   structure = gst_caps_get_structure (target, 0);
-  gst_caps_structure_fixate_field_nearest_int (structure, "width", 320);
-  gst_caps_structure_fixate_field_nearest_int (structure, "height", 240);
-  gst_caps_structure_fixate_field_nearest_double (structure, "framerate", 30.0);
+  gst_structure_fixate_field_nearest_int (structure, "width", 320);
+  gst_structure_fixate_field_nearest_int (structure, "height", 240);
+  gst_structure_fixate_field_nearest_double (structure, "framerate", 30.0);
 
   gst_pad_set_caps (goom->srcpad, target);
   gst_caps_unref (target);
